--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://github.com/adam-lynch/gulp-sitemap-files",
   "dependencies": {
-    "through": "~2.3.4",
-    "xml2js": "^0.4.3",
-    "vinyl": "^0.2.3"
+    "gulp-util": "^3.0.1",
+    "through2": "^0.6.3",
+    "xml2js": "^0.4.3"
   },
   "engines": {
     "node": ">=0.9"
